@@ -20,8 +20,8 @@
  */
 package org.apache.qpid.server.model;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -33,7 +33,8 @@ import java.util.Collections;
 import java.util.Map;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.Test;
+
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.server.security.auth.UsernamePrincipal;
 import org.apache.qpid.test.utils.UnitTestBase;
@@ -58,7 +59,7 @@ public class ConfiguredObjectJacksonModuleTest extends UnitTestBase
         Principal p = new UsernamePrincipal(username, authProvider);
         ObjectMapper mapper = ConfiguredObjectJacksonModule.newObjectMapper(false);
         String json = mapper.writeValueAsString(p);
-        assertEquals("unexpected principal serialisation", expectedSerialisation, json);
+        assertEquals(expectedSerialisation, json, "unexpected principal serialisation");
     }
 
     @Test
@@ -70,13 +71,13 @@ public class ConfiguredObjectJacksonModuleTest extends UnitTestBase
         String encodedValue = encoder.writeValueAsString(testType);
         ObjectMapper decoder = new ObjectMapper();
         Map decodedMap = decoder.readValue(encodedValue, Map.class);
-        assertEquals((long) 3, (long) decodedMap.size());
+        assertEquals(3, (long) decodedMap.size());
         assertTrue(decodedMap.containsKey("name"));
         assertTrue(decodedMap.containsKey("map"));
         assertTrue(decodedMap.containsKey("type"));
         assertEquals("foo", decodedMap.get("name"));
-        assertEquals(Collections.singletonMap("key", "value"), decodedMap.get("map"));
-        assertEquals(Collections.singletonMap("nested", true), decodedMap.get("type"));
+        assertEquals(Map.of("key", "value"), decodedMap.get("map"));
+        assertEquals(Map.of("nested", true), decodedMap.get("type"));
     }
 
     @ManagedAttributeValueType(isAbstract = true)
@@ -89,15 +90,13 @@ public class ConfiguredObjectJacksonModuleTest extends UnitTestBase
 
         public Map<String,String> getMap()
         {
-            return Collections.singletonMap("key", "value");
+            return Map.of("key", "value");
         }
 
         public NestedManagedAttributeValue getType()
         {
             return new NestedManagedAttributeValue();
         }
-
-
     }
 
     @ManagedAttributeValueType(isAbstract = true)
