@@ -20,11 +20,12 @@
  */
 package org.apache.qpid.server.model;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
@@ -39,23 +40,23 @@ import static org.mockito.Mockito.when;
 import java.security.AccessControlException;
 import java.security.Principal;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import javax.security.auth.Subject;
 
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
 import org.mockito.ArgumentMatcher;
 import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
@@ -83,32 +84,28 @@ import org.apache.qpid.server.virtualhost.TestMemoryVirtualHost;
 import org.apache.qpid.server.virtualhost.VirtualHostUnavailableException;
 import org.apache.qpid.test.utils.UnitTestBase;
 
+@SuppressWarnings({"rawtypes", "unchecked"})
 public class VirtualHostTest extends UnitTestBase
 {
-    private final AccessControl _mockAccessControl = BrokerTestHelper.createAccessControlMock();
-    private Broker _broker;
+    private final AccessControl<?> _mockAccessControl = BrokerTestHelper.createAccessControlMock();
     private TaskExecutor _taskExecutor;
     private VirtualHostNode _virtualHostNode;
     private DurableConfigurationStore _configStore;
-    private QueueManagingVirtualHost<?> _virtualHost;
     private StoreConfigurationChangeListener _storeConfigurationChangeListener;
     private PreferenceStore _preferenceStore;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception
     {
+        final Broker broker = BrokerTestHelper.createBrokerMock();
 
-        _broker = BrokerTestHelper.createBrokerMock();
+        _taskExecutor = CurrentThreadTaskExecutor.newStartedInstance();
+        when(broker.getTaskExecutor()).thenReturn(_taskExecutor);
+        when(broker.getChildExecutor()).thenReturn(_taskExecutor);
 
-        _taskExecutor = new CurrentThreadTaskExecutor();
-        _taskExecutor.start();
-        when(_broker.getTaskExecutor()).thenReturn(_taskExecutor);
-        when(_broker.getChildExecutor()).thenReturn(_taskExecutor);
-
-
-        Principal systemPrincipal = ((SystemPrincipalSource)_broker).getSystemPrincipal();
+        final Principal systemPrincipal = ((SystemPrincipalSource) broker).getSystemPrincipal();
         _virtualHostNode = BrokerTestHelper.mockWithSystemPrincipalAndAccessControl(VirtualHostNode.class, systemPrincipal, _mockAccessControl);
-        when(_virtualHostNode.getParent()).thenReturn(_broker);
+        when(_virtualHostNode.getParent()).thenReturn(broker);
         when(_virtualHostNode.getCategoryClass()).thenReturn(VirtualHostNode.class);
         when(_virtualHostNode.isDurable()).thenReturn(true);
 
@@ -117,11 +114,10 @@ public class VirtualHostTest extends UnitTestBase
 
         when(_virtualHostNode.getConfigurationStore()).thenReturn(_configStore);
 
-
         // Virtualhost needs the EventLogger from the SystemContext.
-        when(_virtualHostNode.getParent()).thenReturn(_broker);
+        when(_virtualHostNode.getParent()).thenReturn(broker);
 
-        ConfiguredObjectFactory objectFactory = _broker.getObjectFactory();
+        final ConfiguredObjectFactory objectFactory = broker.getObjectFactory();
         when(_virtualHostNode.getModel()).thenReturn(objectFactory.getModel());
         when(_virtualHostNode.getTaskExecutor()).thenReturn(_taskExecutor);
         when(_virtualHostNode.getChildExecutor()).thenReturn(_taskExecutor);
@@ -129,37 +125,21 @@ public class VirtualHostTest extends UnitTestBase
         when(_virtualHostNode.createPreferenceStore()).thenReturn(_preferenceStore);
     }
 
-    @After
+    @AfterEach
     public void tearDown() throws Exception
     {
-        try
-        {
-            try
-            {
-                _taskExecutor.stopImmediately();
-            }
-            finally
-            {
-                if (_virtualHost != null)
-                {
-                    _virtualHost.close();
-                }
-            }
-        }
-        finally
-        {
-        }
+        _taskExecutor.stopImmediately();
     }
 
     @Test
     public void testNewVirtualHost()
     {
-        String virtualHostName = getTestName();
-        QueueManagingVirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        final String virtualHostName = getTestName();
+        final QueueManagingVirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
 
-        assertNotNull("Unexpected id", virtualHost.getId());
-        assertEquals("Unexpected name", virtualHostName, virtualHost.getName());
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        assertNotNull(virtualHost.getId(), "Unexpected id");
+        assertEquals(virtualHostName, virtualHost.getName(), "Unexpected name");
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
 
         verify(_configStore).update(eq(true), matchesRecord(virtualHost.getId(), virtualHost.getType()));
     }
@@ -167,12 +147,12 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testDeleteVirtualHost()
     {
-        VirtualHost<?> virtualHost = createVirtualHost(getTestName());
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        final VirtualHost<?> virtualHost = createVirtualHost(getTestName());
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
 
         virtualHost.delete();
 
-        assertEquals("Unexpected state", State.DELETED, virtualHost.getState());
+        assertEquals(State.DELETED, virtualHost.getState(), "Unexpected state");
         verify(_configStore).remove(matchesRecord(virtualHost.getId(), virtualHost.getType()));
         verify(_preferenceStore).onDelete();
     }
@@ -180,17 +160,17 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testStopAndStartVirtualHost()
     {
-        String virtualHostName = getTestName();
+        final String virtualHostName = getTestName();
 
-        VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        final VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
 
         ((AbstractConfiguredObject<?>)virtualHost).stop();
-        assertEquals("Unexpected state", State.STOPPED, virtualHost.getState());
+        assertEquals(State.STOPPED, virtualHost.getState(), "Unexpected state");
         verify(_preferenceStore).close();
 
         ((AbstractConfiguredObject<?>)virtualHost).start();
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
 
         verify(_configStore, times(1)).update(eq(true), matchesRecord(virtualHost.getId(), virtualHost.getType()));
         verify(_configStore, times(2)).update(eq(false), matchesRecord(virtualHost.getId(), virtualHost.getType()));
@@ -200,48 +180,41 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testRestartingVirtualHostRecoversChildren()
     {
-        String virtualHostName = getTestName();
+        final String virtualHostName = getTestName();
 
-        VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        final VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
         final ConfiguredObjectRecord virtualHostCor = virtualHost.asObjectRecord();
 
         // Give virtualhost a queue and an exchange
-        Queue queue = virtualHost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, "myQueue"));
+        final Queue queue = virtualHost.createChild(Queue.class, Map.of(Queue.NAME, "myQueue"));
         final ConfiguredObjectRecord queueCor = queue.asObjectRecord();
 
-        Map<String, Object> exchangeArgs = new HashMap<>();
-        exchangeArgs.put(Exchange.NAME, "myExchange");
-        exchangeArgs.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
-
-        Exchange exchange = virtualHost.createChild(Exchange.class, exchangeArgs);
+        final Map<String, Object> exchangeArgs = Map.of(Exchange.NAME, "myExchange",
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        final Exchange exchange = virtualHost.createChild(Exchange.class, exchangeArgs);
         final ConfiguredObjectRecord exchangeCor = exchange.asObjectRecord();
 
-        assertEquals("Unexpected number of queues before stop",
-                            (long) 1,
-                            (long) virtualHost.getChildren(Queue.class).size());
+        assertEquals(1, (long) virtualHost.getChildren(Queue.class).size(),
+                "Unexpected number of queues before stop");
 
-        assertEquals("Unexpected number of exchanges before stop",
-                            (long) 5,
-                            (long) virtualHost.getChildren(Exchange.class).size());
+        assertEquals(5, (long) virtualHost.getChildren(Exchange.class).size(),
+                "Unexpected number of exchanges before stop");
 
         final List<ConfiguredObjectRecord> allObjects = new ArrayList<>();
         allObjects.add(virtualHostCor);
         allObjects.add(queueCor);
-        for(Exchange e : virtualHost.getChildren(Exchange.class))
+        for (final Exchange e : virtualHost.getChildren(Exchange.class))
         {
             allObjects.add(e.asObjectRecord());
         }
 
-
         ((AbstractConfiguredObject<?>)virtualHost).stop();
-        assertEquals("Unexpected state", State.STOPPED, virtualHost.getState());
-        assertEquals("Unexpected number of queues after stop",
-                            (long) 0,
-                            (long) virtualHost.getChildren(Queue.class).size());
-        assertEquals("Unexpected number of exchanges after stop",
-                            (long) 0,
-                            (long) virtualHost.getChildren(Exchange.class).size());
+        assertEquals(State.STOPPED, virtualHost.getState(), "Unexpected state");
+        assertEquals(0, (long) virtualHost.getChildren(Queue.class).size(),
+                "Unexpected number of queues after stop");
+        assertEquals(0, (long) virtualHost.getChildren(Exchange.class).size(),
+                "Unexpected number of exchanges after stop");
 
         // Setup an answer that will return the configured object records
         doAnswer(new Answer()
@@ -251,39 +224,34 @@ public class VirtualHostTest extends UnitTestBase
             @Override
             public Object answer(final InvocationOnMock invocation)
             {
-                ConfiguredObjectRecordHandler handler = (ConfiguredObjectRecordHandler) invocation.getArguments()[0];
-                boolean handlerContinue = true;
-                while(corIterator.hasNext())
+                final ConfiguredObjectRecordHandler handler = (ConfiguredObjectRecordHandler) invocation.getArguments()[0];
+                while (corIterator.hasNext())
                 {
                     handler.handle(corIterator.next());
                 }
-
                 return null;
             }
         }).when(_configStore).reload(any(ConfiguredObjectRecordHandler.class));
 
         ((AbstractConfiguredObject<?>)virtualHost).start();
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
 
-        assertEquals("Unexpected number of queues after restart",
-                            (long) 1,
-                            (long) virtualHost.getChildren(Queue.class).size());
-        assertEquals("Unexpected number of exchanges after restart",
-                            (long) 5,
-                            (long) virtualHost.getChildren(Exchange.class).size());
+        assertEquals(1, (long) virtualHost.getChildren(Queue.class).size(),
+                "Unexpected number of queues after restart");
+        assertEquals(5, (long) virtualHost.getChildren(Exchange.class).size(),
+                "Unexpected number of exchanges after restart");
     }
 
 
     @Test
     public void testModifyDurableChildAfterRestartingVirtualHost()
     {
-        String virtualHostName = getTestName();
-
-        VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        final String virtualHostName = getTestName();
+        final VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
         final ConfiguredObjectRecord virtualHostCor = virtualHost.asObjectRecord();
 
         // Give virtualhost a queue and an exchange
-        Queue queue = virtualHost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, "myQueue"));
+        final Queue queue = virtualHost.createChild(Queue.class, Map.of(Queue.NAME, "myQueue"));
         final ConfiguredObjectRecord queueCor = queue.asObjectRecord();
 
         final List<ConfiguredObjectRecord> allObjects = new ArrayList<>();
@@ -291,7 +259,7 @@ public class VirtualHostTest extends UnitTestBase
         allObjects.add(queueCor);
 
         ((AbstractConfiguredObject<?>)virtualHost).stop();
-        assertEquals("Unexpected state", State.STOPPED, virtualHost.getState());
+        assertEquals(State.STOPPED, virtualHost.getState(), "Unexpected state");
 
         // Setup an answer that will return the configured object records
         doAnswer(new Answer()
@@ -301,54 +269,48 @@ public class VirtualHostTest extends UnitTestBase
             @Override
             public Object answer(final InvocationOnMock invocation)
             {
-                ConfiguredObjectRecordHandler handler = (ConfiguredObjectRecordHandler) invocation.getArguments()[0];
+                final ConfiguredObjectRecordHandler handler = (ConfiguredObjectRecordHandler) invocation.getArguments()[0];
                 while (corIterator.hasNext())
                 {
                     handler.handle(corIterator.next());
                 }
-
                 return null;
             }
         }).when(_configStore).reload(any(ConfiguredObjectRecordHandler.class));
 
         ((AbstractConfiguredObject<?>)virtualHost).start();
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
         final Collection<Queue> queues = virtualHost.getChildren(Queue.class);
-        assertEquals("Unexpected number of queues after restart", (long) 1, (long) queues.size());
+        assertEquals(1, (long) queues.size(), "Unexpected number of queues after restart");
 
         final Queue recoveredQueue = queues.iterator().next();
-        recoveredQueue.setAttributes(Collections.singletonMap(ConfiguredObject.DESCRIPTION, "testDescription"));
+        recoveredQueue.setAttributes(Map.of(ConfiguredObject.DESCRIPTION, "testDescription"));
         final ConfiguredObjectRecord recoveredQueueCor = queue.asObjectRecord();
 
         verify(_configStore).update(eq(false), matchesRecord(recoveredQueueCor.getId(), recoveredQueueCor.getType()));
     }
 
-
     @Test
     public void testStopVirtualHost_ClosesConnections()
     {
-        String virtualHostName = getTestName();
+        final String virtualHostName = getTestName();
+        final QueueManagingVirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
 
-        QueueManagingVirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        assertEquals(0, virtualHost.getConnectionCount(),
+                "Unexpected number of connections before connection registered");
 
-        assertEquals("Unexpected number of connections before connection registered",
-                            (long) 0,
-                            virtualHost.getConnectionCount());
-
-        AMQPConnection modelConnection = getMockConnection();
+        final AMQPConnection modelConnection = getMockConnection();
         virtualHost.registerConnection(modelConnection);
 
-        assertEquals("Unexpected number of connections after connection registered",
-                            (long) 1,
-                            virtualHost.getConnectionCount());
+        assertEquals(1, virtualHost.getConnectionCount(),
+                "Unexpected number of connections after connection registered");
 
         ((AbstractConfiguredObject<?>)virtualHost).stop();
-        assertEquals("Unexpected state", State.STOPPED, virtualHost.getState());
+        assertEquals(State.STOPPED, virtualHost.getState(), "Unexpected state");
 
-        assertEquals("Unexpected number of connections after virtualhost stopped",
-                            (long) 0,
-                            virtualHost.getConnectionCount());
+        assertEquals(0, virtualHost.getConnectionCount(),
+                "Unexpected number of connections after virtualhost stopped");
 
         verify(modelConnection).closeAsync();
     }
@@ -356,28 +318,24 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testDeleteVirtualHost_ClosesConnections()
     {
-        String virtualHostName = getTestName();
+        final String virtualHostName = getTestName();
+        final QueueManagingVirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        assertEquals(State.ACTIVE, virtualHost.getState(), "Unexpected state");
 
-        QueueManagingVirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
-        assertEquals("Unexpected state", State.ACTIVE, virtualHost.getState());
+        assertEquals(0, virtualHost.getConnectionCount(),
+                "Unexpected number of connections before connection registered");
 
-        assertEquals("Unexpected number of connections before connection registered",
-                            (long) 0,
-                            virtualHost.getConnectionCount());
-
-        AMQPConnection modelConnection = getMockConnection();
+        final AMQPConnection modelConnection = getMockConnection();
         virtualHost.registerConnection(modelConnection);
 
-        assertEquals("Unexpected number of connections after connection registered",
-                            (long) 1,
-                            virtualHost.getConnectionCount());
+        assertEquals(1, virtualHost.getConnectionCount(),
+                "Unexpected number of connections after connection registered");
 
         virtualHost.delete();
-        assertEquals("Unexpected state", State.DELETED, virtualHost.getState());
+        assertEquals(State.DELETED, virtualHost.getState(), "Unexpected state");
 
-        assertEquals("Unexpected number of connections after virtualhost deleted",
-                            (long) 0,
-                            virtualHost.getConnectionCount());
+        assertEquals(0, virtualHost.getConnectionCount(),
+                "Unexpected number of connections after virtualhost deleted");
 
         verify(modelConnection).closeAsync();
     }
@@ -385,15 +343,12 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testCreateDurableQueue()
     {
-        String virtualHostName = getTestName();
-        VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
-
-        String queueName = "myQueue";
-        Map<String, Object> arguments = new HashMap<>();
-        arguments.put(Queue.NAME, queueName);
-        arguments.put(Queue.DURABLE, Boolean.TRUE);
-
-        Queue queue = virtualHost.createChild(Queue.class, arguments);
+        final String virtualHostName = getTestName();
+        final VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        final String queueName = "myQueue";
+        final Map<String, Object> arguments = Map.of(Queue.NAME, queueName,
+                Queue.DURABLE, Boolean.TRUE);
+        final Queue queue = virtualHost.createChild(Queue.class, arguments);
         assertNotNull(queue.getId());
         assertEquals(queueName, queue.getName());
 
@@ -403,15 +358,12 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testCreateNonDurableQueue()
     {
-        String virtualHostName = getTestName();
-        VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
-
-        String queueName = "myQueue";
-        Map<String, Object> arguments = new HashMap<>();
-        arguments.put(Queue.NAME, queueName);
-        arguments.put(Queue.DURABLE, Boolean.FALSE);
-
-        Queue queue = virtualHost.createChild(Queue.class, arguments);
+        final String virtualHostName = getTestName();
+        final VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        final String queueName = "myQueue";
+        final Map<String, Object> arguments = Map.of(Queue.NAME, queueName,
+                Queue.DURABLE, Boolean.FALSE);
+        final Queue queue = virtualHost.createChild(Queue.class, arguments);
         assertNotNull(queue.getId());
         assertEquals(queueName, queue.getName());
 
@@ -423,81 +375,50 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testUpdateDeniedByACL()
     {
-
-        String virtualHostName = getTestName();
-        VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        final String virtualHostName = getTestName();
+        final VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
 
         when(_mockAccessControl.authorise(eq(null), eq(Operation.UPDATE), eq(virtualHost), any(Map.class))).thenReturn(Result.DENIED);
 
-
         assertNull(virtualHost.getDescription());
 
-        try
-        {
-            virtualHost.setAttributes(Collections.<String, Object>singletonMap(VirtualHost.DESCRIPTION, "My description"));
-            fail("Exception not thrown");
-        }
-        catch (AccessControlException ace)
-        {
-            // PASS
-        }
-
+        assertThrows(AccessControlException.class,
+                () -> virtualHost.setAttributes(Map.of(VirtualHost.DESCRIPTION, "My description")),
+                "Exception not thrown");
         verify(_configStore, never()).update(eq(false), matchesRecord(virtualHost.getId(), virtualHost.getType()));
     }
 
     @Test
     public void testStopDeniedByACL()
     {
-        String virtualHostName = getTestName();
-        VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        final String virtualHostName = getTestName();
+        final VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
 
-        when(_mockAccessControl.authorise(eq(null),
-                                          eq(Operation.UPDATE),
-                                          same(virtualHost),
-                                          any(Map.class))).thenReturn(Result.DENIED);
-
-        try
-        {
-            ((AbstractConfiguredObject<?>)virtualHost).stop();
-            fail("Exception not thrown");
-        }
-        catch (AccessControlException ace)
-        {
-            // PASS
-        }
-
+        when(_mockAccessControl.authorise(eq(null), eq(Operation.UPDATE), same(virtualHost), any(Map.class)))
+                .thenReturn(Result.DENIED);
+        assertThrows(AccessControlException.class,
+                () -> ((AbstractConfiguredObject<?>)virtualHost).stop(),
+                "Exception not thrown");
         verify(_configStore, never()).update(eq(false), matchesRecord(virtualHost.getId(), virtualHost.getType()));
     }
 
     @Test
     public void testDeleteDeniedByACL()
     {
-        String virtualHostName = getTestName();
-        VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
+        final String virtualHostName = getTestName();
+        final VirtualHost<?> virtualHost = createVirtualHost(virtualHostName);
 
-        when(_mockAccessControl.authorise(eq(null),
-                                          eq(Operation.DELETE),
-                                          same(virtualHost),
-                                          any(Map.class))).thenReturn(Result.DENIED);
-
-        try
-        {
-            virtualHost.delete();
-            fail("Exception not thrown");
-        }
-        catch (AccessControlException ace)
-        {
-            // PASS
-        }
-
+        when(_mockAccessControl.authorise(eq(null), eq(Operation.DELETE), same(virtualHost), any(Map.class)))
+                .thenReturn(Result.DENIED);
+        assertThrows(AccessControlException.class, virtualHost::delete, "Exception not thrown");
         verify(_configStore, never()).remove(matchesRecord(virtualHost.getId(), virtualHost.getType()));
     }
 
     @Test
     public void testExistingConnectionBlocking()
     {
-        VirtualHost<?> host = createVirtualHost(getTestName());
-        AMQPConnection connection = getMockConnection();
+        final VirtualHost<?> host = createVirtualHost(getTestName());
+        final AMQPConnection connection = getMockConnection();
         host.registerConnection(connection);
         ((EventListener) host).event(Event.PERSISTENT_MESSAGE_SIZE_OVERFULL);
         verify(connection).block();
@@ -506,95 +427,54 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testCreateValidation()
     {
-        try
-        {
-            createVirtualHost(getTestName(), Collections.singletonMap(QueueManagingVirtualHost.NUMBER_OF_SELECTORS,
-                                                                      "-1"));
-            fail("Exception not thrown for negative number of selectors");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
-        try
-        {
-            createVirtualHost(getTestName(), Collections.singletonMap(QueueManagingVirtualHost.CONNECTION_THREAD_POOL_SIZE, "-1"));
-            fail("Exception not thrown for negative connection thread pool size");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
-        try
-        {
-            createVirtualHost(getTestName(), Collections.<String, Object>singletonMap(QueueManagingVirtualHost.NUMBER_OF_SELECTORS, QueueManagingVirtualHost.DEFAULT_VIRTUALHOST_CONNECTION_THREAD_POOL_SIZE));
-            fail("Exception not thrown for number of selectors equal to connection thread pool size");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
+        assertThrows(IllegalConfigurationException.class,
+                () -> createVirtualHost(getTestName(), Map.of(QueueManagingVirtualHost.NUMBER_OF_SELECTORS, "-1")),
+                "Exception not thrown for negative number of selectors");
+        assertThrows(IllegalConfigurationException.class,
+                () -> createVirtualHost(getTestName(), Map.of(QueueManagingVirtualHost.CONNECTION_THREAD_POOL_SIZE, "-1")),
+                "Exception not thrown for negative connection thread pool size");
+        assertThrows(IllegalConfigurationException.class,
+                () -> createVirtualHost(getTestName(), Map.of(QueueManagingVirtualHost.NUMBER_OF_SELECTORS, QueueManagingVirtualHost.DEFAULT_VIRTUALHOST_CONNECTION_THREAD_POOL_SIZE)),
+                "Exception not thrown for number of selectors equal to connection thread pool size");
     }
 
     @Test
     public void testChangeValidation()
     {
-        QueueManagingVirtualHost<?> virtualHost = createVirtualHost(getTestName());
-        try
-        {
-            virtualHost.setAttributes(Collections.<String, Object>singletonMap(QueueManagingVirtualHost.NUMBER_OF_SELECTORS, "-1"));
-            fail("Exception not thrown for negative number of selectors");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
-        try
-        {
-            virtualHost.setAttributes(Collections.singletonMap(QueueManagingVirtualHost.CONNECTION_THREAD_POOL_SIZE,
-                                                               "-1"));
-            fail("Exception not thrown for negative connection thread pool size");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
-        try
-        {
-            virtualHost.setAttributes(Collections.singletonMap(QueueManagingVirtualHost.NUMBER_OF_SELECTORS, QueueManagingVirtualHost.DEFAULT_VIRTUALHOST_CONNECTION_THREAD_POOL_SIZE));
-            fail("Exception not thrown for number of selectors equal to connection thread pool size");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
+        final QueueManagingVirtualHost<?> virtualHost = createVirtualHost(getTestName());
+        assertThrows(IllegalConfigurationException.class,
+                () -> virtualHost.setAttributes(Map.of(QueueManagingVirtualHost.NUMBER_OF_SELECTORS, "-1")),
+                "Exception not thrown for negative number of selectors");
+        assertThrows(IllegalConfigurationException.class,
+                () -> virtualHost.setAttributes(Map.of(QueueManagingVirtualHost.CONNECTION_THREAD_POOL_SIZE, "-1")),
+                "Exception not thrown for negative connection thread pool size");
+        assertThrows(IllegalConfigurationException.class,
+                () -> virtualHost.setAttributes(Map.of(QueueManagingVirtualHost.NUMBER_OF_SELECTORS, QueueManagingVirtualHost.DEFAULT_VIRTUALHOST_CONNECTION_THREAD_POOL_SIZE)),
+                "Exception not thrown for number of selectors equal to connection thread pool size");
     }
 
     @Test
     public void testRegisterConnection()
     {
-        QueueManagingVirtualHost<?> vhost = createVirtualHost("sdf");
-        AMQPConnection<?> connection = getMockConnection();
+        final QueueManagingVirtualHost<?> vhost = createVirtualHost("sdf");
+        final AMQPConnection<?> connection = getMockConnection();
 
-        assertEquals("unexpected number of connections before test", (long) 0, vhost.getConnectionCount());
+        assertEquals(0, vhost.getConnectionCount(), "unexpected number of connections before test");
         vhost.registerConnection(connection);
-        assertEquals("unexpected number of connections after registerConnection",
-                            (long) 1,
-                            vhost.getConnectionCount());
-        assertEquals("unexpected connection object", Collections.singleton(connection), vhost.getConnections());
+        assertEquals(1, vhost.getConnectionCount(), "unexpected number of connections after registerConnection");
+        assertEquals(Set.of(connection), vhost.getConnections(), "unexpected connection object");
     }
 
     @Test
     public void testStopVirtualhostClosesConnections()
     {
-        QueueManagingVirtualHost<?> vhost = createVirtualHost("sdf");
-        AMQPConnection<?> connection = getMockConnection();
+        final QueueManagingVirtualHost<?> vhost = createVirtualHost("sdf");
+        final AMQPConnection<?> connection = getMockConnection();
 
         vhost.registerConnection(connection);
-        assertEquals("unexpected number of connections after registerConnection",
-                            (long) 1,
-                            vhost.getConnectionCount());
-        assertEquals("unexpected connection object", Collections.singleton(connection), vhost.getConnections());
+        assertEquals(1, vhost.getConnectionCount(),
+                     "unexpected number of connections after registerConnection");
+        assertEquals(Set.of(connection), vhost.getConnections(), "unexpected connection object");
         ((AbstractConfiguredObject<?>)vhost).stop();
         verify(connection).stopConnection();
         verify(connection).closeAsync();
@@ -603,29 +483,22 @@ public class VirtualHostTest extends UnitTestBase
     @Test
     public void testRegisterConnectionOnStoppedVirtualhost()
     {
-        QueueManagingVirtualHost<?> vhost = createVirtualHost("sdf");
-        AMQPConnection<?> connection = getMockConnection();
+        final QueueManagingVirtualHost<?> vhost = createVirtualHost("sdf");
+        final AMQPConnection<?> connection = getMockConnection();
 
         ((AbstractConfiguredObject<?>)vhost).stop();
-        try
-        {
-            vhost.registerConnection(connection);
-            fail("exception not thrown");
-        }
-        catch (VirtualHostUnavailableException e)
-        {
-            // pass
-        }
-        assertEquals("unexpected number of connections", (long) 0, vhost.getConnectionCount());
+        assertThrows(VirtualHostUnavailableException.class, () -> vhost.registerConnection(connection),
+                "Exception not thrown");
+        assertEquals(0, vhost.getConnectionCount(), "unexpected number of connections");
         ((AbstractConfiguredObject<?>)vhost).start();
         vhost.registerConnection(connection);
-        assertEquals("unexpected number of connections", (long) 1, vhost.getConnectionCount());
+        assertEquals(1, vhost.getConnectionCount(), "unexpected number of connections");
     }
 
     @Test
     public void testAddValidAutoCreationPolicies()
     {
-        NodeAutoCreationPolicy[] policies = new NodeAutoCreationPolicy[] {
+        final NodeAutoCreationPolicy[] policies = new NodeAutoCreationPolicy[] {
                 new NodeAutoCreationPolicy()
                 {
                     @Override
@@ -655,7 +528,7 @@ public class VirtualHostTest extends UnitTestBase
                     @Override
                     public Map<String, Object> getAttributes()
                     {
-                        return Collections.emptyMap();
+                        return Map.of();
                     }
                 },
                 new NodeAutoCreationPolicy()
@@ -687,35 +560,32 @@ public class VirtualHostTest extends UnitTestBase
                     @Override
                     public Map<String, Object> getAttributes()
                     {
-                        return Collections.singletonMap(Exchange.TYPE, "amq.fanout");
+                        return Map.of(Exchange.TYPE, "amq.fanout");
                     }
                 }
         };
-        String virtualHostName = getTestName();
-        QueueManagingVirtualHost<?> vhost = createVirtualHost(virtualHostName);
-
-
-        Map<String, Object> newAttributes = Collections.singletonMap(QueueManagingVirtualHost.NODE_AUTO_CREATION_POLICIES,
-                                                                     Arrays.asList(policies));
+        final String virtualHostName = getTestName();
+        final QueueManagingVirtualHost<?> vhost = createVirtualHost(virtualHostName);
+        final Map<String, Object> newAttributes = Map
+                .of(QueueManagingVirtualHost.NODE_AUTO_CREATION_POLICIES, List.of(policies));
 
         vhost.setAttributes(newAttributes);
 
-        List<NodeAutoCreationPolicy> retrievedPoliciesList = vhost.getNodeAutoCreationPolicies();
-        assertEquals("Retrieved node policies list has incorrect size",
-                            (long) 2,
-                            (long) retrievedPoliciesList.size());
-        NodeAutoCreationPolicy firstPolicy =  retrievedPoliciesList.get(0);
-        NodeAutoCreationPolicy secondPolicy = retrievedPoliciesList.get(1);
+        final List<NodeAutoCreationPolicy> retrievedPoliciesList = vhost.getNodeAutoCreationPolicies();
+        assertEquals(2, (long) retrievedPoliciesList.size(),
+                "Retrieved node policies list has incorrect size");
+        final NodeAutoCreationPolicy firstPolicy =  retrievedPoliciesList.get(0);
+        final NodeAutoCreationPolicy secondPolicy = retrievedPoliciesList.get(1);
         assertEquals("fooQ*", firstPolicy.getPattern());
         assertEquals("barE*", secondPolicy.getPattern());
-        assertEquals(true, firstPolicy.isCreatedOnConsume());
-        assertEquals(false, secondPolicy.isCreatedOnConsume());
+        assertTrue(firstPolicy.isCreatedOnConsume());
+        assertFalse(secondPolicy.isCreatedOnConsume());
     }
 
     @Test
     public void testAddInvalidAutoCreationPolicies()
     {
-        NodeAutoCreationPolicy[] policies = new NodeAutoCreationPolicy[] {
+        final NodeAutoCreationPolicy[] policies = new NodeAutoCreationPolicy[] {
                 new NodeAutoCreationPolicy()
                 {
                     @Override
@@ -745,27 +615,20 @@ public class VirtualHostTest extends UnitTestBase
                     @Override
                     public Map<String, Object> getAttributes()
                     {
-                        return Collections.emptyMap();
+                        return Map.of();
                     }
                 }
         };
 
-        QueueManagingVirtualHost<?> vhost = createVirtualHost("host");
-        Map<String, Object> newAttributes = Collections.singletonMap(QueueManagingVirtualHost.NODE_AUTO_CREATION_POLICIES,
-                                                                     Arrays.asList(policies));
+        final QueueManagingVirtualHost<?> vhost = createVirtualHost("host");
+        final Map<String, Object> newAttributes = Map
+                .of(QueueManagingVirtualHost.NODE_AUTO_CREATION_POLICIES, List.of(policies));
 
-        try
-        {
-            vhost.setAttributes(newAttributes);
-            fail("Exception not thrown");
-        }
-        catch (IllegalArgumentException e)
-        {
-            // PASS
-        }
+        assertThrows(IllegalArgumentException.class, () -> vhost.setAttributes(newAttributes),
+                "Exception not thrown");
 
-        List<NodeAutoCreationPolicy> retrievedPoliciesList = vhost.getNodeAutoCreationPolicies();
-        assertTrue("Retrieved node policies is not empty", ((List) retrievedPoliciesList).isEmpty());
+        final List<NodeAutoCreationPolicy> retrievedPoliciesList = vhost.getNodeAutoCreationPolicies();
+        assertTrue(retrievedPoliciesList.isEmpty(), "Retrieved node policies is not empty");
     }
 
     private AMQPConnection<?> getMockConnection()
@@ -775,10 +638,10 @@ public class VirtualHostTest extends UnitTestBase
 
     private AMQPConnection<?> mockAmqpConnection(final Principal principal)
     {
-        AMQPConnection<?> connection = mock(AMQPConnection.class);
+        final AMQPConnection<?> connection = mock(AMQPConnection.class);
         when(connection.getAuthorizedPrincipal()).thenReturn(principal);
         final Subject subject =
-                new Subject(true, Collections.singleton(principal), Collections.emptySet(), Collections.emptySet());
+                new Subject(true, Set.of(principal), Set.of(), Set.of());
         when(connection.getSubject()).thenReturn(subject);
         final ListenableFuture<Void> listenableFuture = Futures.immediateFuture(null);
         when(connection.closeAsync()).thenReturn(listenableFuture);
@@ -795,27 +658,26 @@ public class VirtualHostTest extends UnitTestBase
 
     private QueueManagingVirtualHost<?> createVirtualHost(final String virtualHostName)
     {
-        return createVirtualHost(virtualHostName, Collections.<String, Object>emptyMap());
+        return createVirtualHost(virtualHostName, Map.of());
     }
 
-    private QueueManagingVirtualHost<?> createVirtualHost(final String virtualHostName, Map<String,Object> attributes)
+    private QueueManagingVirtualHost<?> createVirtualHost(final String virtualHostName, final Map<String,Object> attributes)
     {
-        Map<String, Object> vhAttributes = new HashMap<>();
+        final Map<String, Object> vhAttributes = new HashMap<>();
         vhAttributes.put(VirtualHost.NAME, virtualHostName);
         vhAttributes.put(VirtualHost.TYPE, TestMemoryVirtualHost.VIRTUAL_HOST_TYPE);
         vhAttributes.putAll(attributes);
 
-        TestMemoryVirtualHost host = new TestMemoryVirtualHost(vhAttributes, _virtualHostNode);
+        final TestMemoryVirtualHost host = new TestMemoryVirtualHost(vhAttributes, _virtualHostNode);
         host.addChangeListener(_storeConfigurationChangeListener);
         host.create();
         // Fire the child added event on the node
         _storeConfigurationChangeListener.childAdded(_virtualHostNode,host);
-        _virtualHost = host;
-        when(_virtualHostNode.getVirtualHost()).thenReturn(_virtualHost);
+        when(_virtualHostNode.getVirtualHost()).thenReturn(host);
         return host;
     }
 
-    private static ConfiguredObjectRecord matchesRecord(UUID id, String type)
+    private static ConfiguredObjectRecord matchesRecord(final UUID id, final String type)
     {
         return argThat(new MinimalConfiguredObjectRecordMatcher(id, type));
     }
@@ -825,14 +687,14 @@ public class VirtualHostTest extends UnitTestBase
         private final UUID _id;
         private final String _type;
 
-        private MinimalConfiguredObjectRecordMatcher(UUID id, String type)
+        private MinimalConfiguredObjectRecordMatcher(final UUID id, final String type)
         {
             _id = id;
             _type = type;
         }
 
         @Override
-        public boolean matches(ConfiguredObjectRecord rhs)
+        public boolean matches(final ConfiguredObjectRecord rhs)
         {
             return (_id.equals(rhs.getId()) || _type.equals(rhs.getType()));
         }
