@@ -19,8 +19,8 @@
 
 package org.apache.qpid.server.queue;
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.Mockito.mock;
@@ -30,14 +30,13 @@ import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 import java.security.PrivilegedAction;
-import java.util.Collections;
+import java.util.Set;
 
 import javax.security.auth.Subject;
 
-import org.hamcrest.BaseMatcher;
-import org.hamcrest.Description;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
 import org.mockito.ArgumentMatcher;
 
 import org.apache.qpid.server.connection.SessionPrincipal;
@@ -57,14 +56,13 @@ public class ProducerFlowControlOverflowPolicyHandlerTest extends UnitTestBase
     private EventLogger _eventLogger;
     private LogSubject _subject;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception
     {
-
         _eventLogger = mock(EventLogger.class);
         _subject = mock(LogSubject.class);
-
         _queue = mock(AbstractQueue.class);
+
         when(_queue.getMaximumQueueDepthBytes()).thenReturn(-1L);
         when(_queue.getMaximumQueueDepthMessages()).thenReturn(-1L);
         when(_queue.getOverflowPolicy()).thenReturn(OverflowPolicy.PRODUCER_FLOW_CONTROL);
@@ -77,124 +75,117 @@ public class ProducerFlowControlOverflowPolicyHandlerTest extends UnitTestBase
     }
 
     @Test
-    public void testCheckOverflowBlocksSessionWhenOverfullBytes() throws Exception
+    public void testCheckOverflowBlocksSessionWhenOverfullBytes()
     {
-        AMQPSession<?, ?> session = mock(AMQPSession.class);
+        final AMQPSession<?, ?> session = mock(AMQPSession.class);
         when(_queue.getQueueDepthBytes()).thenReturn(11L);
         when(_queue.getMaximumQueueDepthBytes()).thenReturn(10L);
 
         checkOverflow(session);
 
         verify(session, times(1)).block(_queue);
-        LogMessage logMessage = QueueMessages.OVERFULL(11, 10, 0, -1);
+        final LogMessage logMessage = QueueMessages.OVERFULL(11, 10, 0, -1);
         verify(_eventLogger).message(same(_subject), argThat(new LogMessageMatcher(logMessage)));
         verifyNoMoreInteractions(_eventLogger);
         verifyNoMoreInteractions(session);
     }
 
     @Test
-    public void testCheckOverflowBlocksSessionWhenOverfullMessages() throws Exception
+    public void testCheckOverflowBlocksSessionWhenOverfullMessages()
     {
-        AMQPSession<?, ?> session = mock(AMQPSession.class);
+        final AMQPSession<?, ?> session = mock(AMQPSession.class);
         when(_queue.getMaximumQueueDepthMessages()).thenReturn(10L);
         when(_queue.getQueueDepthMessages()).thenReturn(11);
 
         checkOverflow(session);
 
         verify(session, times(1)).block(_queue);
-        LogMessage logMessage = QueueMessages.OVERFULL(0, -1, 11, 10);
+        final LogMessage logMessage = QueueMessages.OVERFULL(0, -1, 11, 10);
         verify(_eventLogger).message(same(_subject), argThat(new LogMessageMatcher(logMessage)));
         verifyNoMoreInteractions(_eventLogger);
         verifyNoMoreInteractions(session);
     }
 
     @Test
-    public void testIsQueueFlowStopped() throws Exception
+    public void testIsQueueFlowStopped()
     {
-        assertFalse("Flow should not be stopped", _producerFlowControlOverflowPolicyHandler.isQueueFlowStopped());
-
+        assertFalse(_producerFlowControlOverflowPolicyHandler.isQueueFlowStopped(),
+                "Flow should not be stopped");
 
         when(_queue.getQueueDepthBytes()).thenReturn(11L);
         when(_queue.getMaximumQueueDepthBytes()).thenReturn(10L);
 
         checkOverflow(mock(AMQPSession.class));
 
-        assertTrue("Flow should be stopped", _producerFlowControlOverflowPolicyHandler.isQueueFlowStopped());
+        assertTrue(_producerFlowControlOverflowPolicyHandler.isQueueFlowStopped(), "Flow should be stopped");
     }
 
     @Test
-    public void testCheckOverflowResumesFlowWhenUnderfullBytes() throws Exception
+    public void testCheckOverflowResumesFlowWhenUnderfullBytes()
     {
-        AMQPSession<?, ?> session = mock(AMQPSession.class);
+        final AMQPSession<?, ?> session = mock(AMQPSession.class);
         when(_queue.getQueueDepthBytes()).thenReturn(11L);
         when(_queue.getMaximumQueueDepthBytes()).thenReturn(10L);
 
         checkOverflow(session);
 
         verify(session, times(1)).block(_queue);
-        LogMessage overfullMessage = QueueMessages.OVERFULL(11, 10, 0, -1);
+        final LogMessage overfullMessage = QueueMessages.OVERFULL(11, 10, 0, -1);
         verify(_eventLogger).message(same(_subject), argThat(new LogMessageMatcher(overfullMessage)));
-        assertTrue("Flow should be stopped", _producerFlowControlOverflowPolicyHandler.isQueueFlowStopped());
+        assertTrue(_producerFlowControlOverflowPolicyHandler.isQueueFlowStopped(), "Flow should be stopped");
 
         when(_queue.getQueueDepthBytes()).thenReturn(8L);
 
         _producerFlowControlOverflowPolicyHandler.checkOverflow(null);
 
         verify(session, times(1)).unblock(_queue);
-        assertFalse("Flow should not be stopped", _producerFlowControlOverflowPolicyHandler.isQueueFlowStopped());
-        LogMessage underfullMessage = QueueMessages.UNDERFULL(8, 8, 0, -1);
+        assertFalse(_producerFlowControlOverflowPolicyHandler.isQueueFlowStopped(), "Flow should not be stopped");
+        final LogMessage underfullMessage = QueueMessages.UNDERFULL(8, 8, 0, -1);
         verify(_eventLogger).message(same(_subject), argThat(new LogMessageMatcher(underfullMessage)));
         verifyNoMoreInteractions(_eventLogger);
         verifyNoMoreInteractions(session);
     }
 
     @Test
-    public void testCheckOverflowResumesFlowWhenUnderfullMessages() throws Exception
+    public void testCheckOverflowResumesFlowWhenUnderfullMessages()
     {
-        AMQPSession<?, ?> session = mock(AMQPSession.class);
+        final AMQPSession<?, ?> session = mock(AMQPSession.class);
         when(_queue.getQueueDepthMessages()).thenReturn(11);
         when(_queue.getMaximumQueueDepthMessages()).thenReturn(10L);
 
         checkOverflow(session);
 
         verify(session, times(1)).block(_queue);
-        LogMessage overfullMessage = QueueMessages.OVERFULL(0, -1, 11, 10);
+        final LogMessage overfullMessage = QueueMessages.OVERFULL(0, -1, 11, 10);
         verify(_eventLogger).message(same(_subject), argThat(new LogMessageMatcher(overfullMessage)));
-        assertTrue("Flow should be stopped", _producerFlowControlOverflowPolicyHandler.isQueueFlowStopped());
+        assertTrue(_producerFlowControlOverflowPolicyHandler.isQueueFlowStopped(), "Flow should be stopped");
 
         when(_queue.getQueueDepthMessages()).thenReturn(8);
 
         _producerFlowControlOverflowPolicyHandler.checkOverflow(null);
 
         verify(session, times(1)).unblock(_queue);
-        assertFalse("Flow should not be stopped", _producerFlowControlOverflowPolicyHandler.isQueueFlowStopped());
-        LogMessage underfullMessage = QueueMessages.UNDERFULL(0, -1, 8, 8);
+        assertFalse(_producerFlowControlOverflowPolicyHandler.isQueueFlowStopped(), "Flow should not be stopped");
+        final LogMessage underfullMessage = QueueMessages.UNDERFULL(0, -1, 8, 8);
         verify(_eventLogger).message(same(_subject), argThat(new LogMessageMatcher(underfullMessage)));
         verifyNoMoreInteractions(_eventLogger);
         verifyNoMoreInteractions(session);
     }
 
-    private void checkOverflow(AMQPSession<?, ?> session)
+    private void checkOverflow(final AMQPSession<?, ?> session)
     {
-        Subject subject = createSubject(session);
-        Subject.doAs(subject, new PrivilegedAction<Void>()
+        final Subject subject = createSubject(session);
+        Subject.doAs(subject, (PrivilegedAction<Void>) () ->
         {
-            @Override
-            public Void run()
-            {
-                _producerFlowControlOverflowPolicyHandler.checkOverflow(null);
-                return null;
-            }
+            _producerFlowControlOverflowPolicyHandler.checkOverflow(null);
+            return null;
         });
     }
 
     private Subject createSubject(final AMQPSession<?, ?> session)
     {
-        SessionPrincipal sessionPrincipal = new SessionPrincipal(session);
-        return new Subject(true,
-                           Collections.singleton(sessionPrincipal),
-                           Collections.EMPTY_SET,
-                           Collections.EMPTY_SET);
+        final SessionPrincipal sessionPrincipal = new SessionPrincipal(session);
+        return new Subject(true, Set.of(sessionPrincipal), Set.of(), Set.of());
     }
 
     public static class LogMessageMatcher implements ArgumentMatcher<LogMessage>
