@@ -20,15 +20,18 @@
  */
 package org.apache.qpid.server.security.auth.manager.oauth2;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
+import java.security.cert.X509Certificate;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import javax.net.ssl.HostnameVerifier;
@@ -38,10 +41,11 @@ import javax.net.ssl.SSLSession;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+import org.junit.jupiter.api.extension.RegisterExtension;
 
 import org.apache.qpid.server.configuration.updater.CurrentThreadTaskExecutor;
 import org.apache.qpid.server.configuration.updater.TaskExecutor;
@@ -60,17 +64,15 @@ import org.apache.qpid.test.utils.UnitTestBase;
 
 public class OAuth2AuthenticationProviderImplTest extends UnitTestBase
 {
-    @ClassRule
+    @RegisterExtension
     public static final TlsResource TLS_RESOURCE = new TlsResource();
-
-    static final String UTF8 = StandardCharsets.UTF_8.name();
 
     private static final String TEST_ENDPOINT_HOST = "localhost";
     private static final String TEST_AUTHORIZATION_ENDPOINT_PATH = "/testauth";
     private static final String TEST_TOKEN_ENDPOINT_PATH = "/testtoken";
     private static final String TEST_IDENTITY_RESOLVER_ENDPOINT_PATH = "/testidresolver";
     private static final String TEST_POST_LOGOUT_PATH = "/testpostlogout";
-
+    static final String UTF8 = StandardCharsets.UTF_8.name();
     static final String TEST_CLIENT_ID = "testClientId";
     static final String TEST_CLIENT_SECRET = "testClientSecret";
     private static final String TEST_IDENTITY_RESOLVER_TYPE = CloudFoundryOAuth2IdentityResolverService.TYPE;
@@ -81,29 +83,27 @@ public class OAuth2AuthenticationProviderImplTest extends UnitTestBase
     private static final String TEST_POST_LOGOUT_URI_PATTERN = "https://%s:%d%s";
     private static final String TEST_SCOPE = "testScope";
     private static final String TEST_TRUST_STORE_NAME = null;
-
     private static final String TEST_VALID_AUTHORIZATION_CODE = "validAuthorizationCode";
     private static final String TEST_INVALID_AUTHORIZATION_CODE = "invalidAuthorizationCode";
     private static final String TEST_VALID_ACCESS_TOKEN = "validAccessToken";
     private static final String TEST_INVALID_ACCESS_TOKEN = "invalidAccessToken";
     private static final String TEST_USER_NAME = "testUser";
-
     private static final String TEST_REDIRECT_URI = "localhost:23523";
 
     private OAuth2AuthenticationProvider<?> _authProvider;
     private OAuth2MockEndpointHolder _server;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception
     {
-        Path keyStore = TLS_RESOURCE.createSelfSignedKeyStore("CN=foo");
+        final Path keyStore = TLS_RESOURCE.createSelfSignedKeyStore("CN=foo");
         _server = new OAuth2MockEndpointHolder(keyStore.toFile().getAbsolutePath(),
                                                TLS_RESOURCE.getSecret(),
                                                TLS_RESOURCE.getKeyStoreType());
         _server.start();
 
-        Broker broker = BrokerTestHelper.createBrokerMock();
-        TaskExecutor taskExecutor = CurrentThreadTaskExecutor.newStartedInstance();
+        final Broker<?> broker = BrokerTestHelper.createBrokerMock();
+        final TaskExecutor taskExecutor = CurrentThreadTaskExecutor.newStartedInstance();
         when(broker.getTaskExecutor()).thenReturn(taskExecutor);
         when(broker.getChildExecutor()).thenReturn(taskExecutor);
         final Map<String, Object> authProviderAttributes = new HashMap<>();
@@ -138,7 +138,7 @@ public class OAuth2AuthenticationProviderImplTest extends UnitTestBase
         setTestSystemProperty(CachingAuthenticationProvider.AUTHENTICATION_CACHE_MAX_SIZE, "0");
         _authProvider = new OAuth2AuthenticationProviderImpl(authProviderAttributes, broker);
         _authProvider.open();
-        assertEquals("Could not successfully open authProvider", State.ACTIVE, _authProvider.getState());
+        assertEquals(State.ACTIVE, _authProvider.getState(), "Could not successfully open authProvider");
 
         final TrustManager[] trustingTrustManager = new TrustManager[] {new TrustingTrustManager() };
 
@@ -148,37 +148,28 @@ public class OAuth2AuthenticationProviderImplTest extends UnitTestBase
         HttpsURLConnection.setDefaultHostnameVerifier(new BlindHostnameVerifier());
     }
 
-    @After
+    @AfterEach
     public void tearDown() throws Exception
     {
-        try
+        if (_server != null)
         {
-            if (_server != null)
-            {
-                _server.stop();
-            }
-        }
-        finally
-        {
+            _server.stop();
         }
     }
 
     @Test
-    public void testGetSecureOnlyMechanisms() throws Exception
+    public void testGetSecureOnlyMechanisms()
     {
-        assertEquals("OAuth2 should be a secure only mechanism",
-                            Collections.singletonList(OAuth2Negotiator.MECHANISM),
-                            _authProvider.getSecureOnlyMechanisms());
-
+        assertEquals(List.of(OAuth2Negotiator.MECHANISM), _authProvider.getSecureOnlyMechanisms(),
+                "OAuth2 should be a secure only mechanism");
     }
 
     @Test
     public void testAuthenticateViaSasl() throws Exception
     {
-        _server.setEndpoints(Collections.singletonMap(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH,
-                                                      createMockIdentityResolverEndpoint()));
+        _server.setEndpoints(Map.of(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH, createMockIdentityResolverEndpoint()));
         final SaslNegotiator negotiator = _authProvider.createSaslNegotiator(OAuth2Negotiator.MECHANISM, null, null);
-        AuthenticationResult authenticationResult = negotiator.handleResponse(("auth=Bearer " + TEST_VALID_ACCESS_TOKEN + "\1\1").getBytes(UTF8));
+        final AuthenticationResult authenticationResult = negotiator.handleResponse(("auth=Bearer " + TEST_VALID_ACCESS_TOKEN + "\1\1").getBytes(UTF8));
 
         assertSuccess(authenticationResult);
     }
@@ -186,120 +177,108 @@ public class OAuth2AuthenticationProviderImplTest extends UnitTestBase
     @Test
     public void testFailAuthenticateViaSasl() throws Exception
     {
-        OAuth2MockEndpoint mockIdentityResolverEndpoint = createMockIdentityResolverEndpoint();
+        final OAuth2MockEndpoint mockIdentityResolverEndpoint = createMockIdentityResolverEndpoint();
         mockIdentityResolverEndpoint.putExpectedParameter("token", TEST_INVALID_ACCESS_TOKEN);
         mockIdentityResolverEndpoint.setResponse(400, "{\"error\":\"invalid_token\"}");
-        _server.setEndpoints(Collections.singletonMap(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH,
-                                                      mockIdentityResolverEndpoint));
+        _server.setEndpoints(Map.of(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH, mockIdentityResolverEndpoint));
 
         final SaslNegotiator negotiator = _authProvider.createSaslNegotiator(OAuth2Negotiator.MECHANISM, null, null);
-        AuthenticationResult authenticationResult = negotiator.handleResponse(("auth=Bearer " + TEST_INVALID_ACCESS_TOKEN + "\1\1").getBytes(UTF8));
+        final AuthenticationResult authenticationResult = negotiator.handleResponse(("auth=Bearer " + TEST_INVALID_ACCESS_TOKEN + "\1\1").getBytes(UTF8));
         assertFailure(authenticationResult, "invalid_token");
     }
 
     @Test
-    public void testAuthenticateViaAuthorizationCode() throws Exception
+    public void testAuthenticateViaAuthorizationCode()
     {
-        Map<String, OAuth2MockEndpoint> mockEndpoints = new HashMap<>();
-        mockEndpoints.put(TEST_TOKEN_ENDPOINT_PATH, createMockTokenEndpoint());
-        mockEndpoints.put(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH, createMockIdentityResolverEndpoint());
+        final Map<String, OAuth2MockEndpoint> mockEndpoints = Map.of(TEST_TOKEN_ENDPOINT_PATH, createMockTokenEndpoint(),
+                TEST_IDENTITY_RESOLVER_ENDPOINT_PATH, createMockIdentityResolverEndpoint());
         _server.setEndpoints(mockEndpoints);
 
         final NamedAddressSpace mockAddressSpace = mock(NamedAddressSpace.class);
         when(mockAddressSpace.getName()).thenReturn("mock");
 
-        AuthenticationResult authenticationResult =
+        final AuthenticationResult authenticationResult =
                 _authProvider.authenticateViaAuthorizationCode(TEST_VALID_AUTHORIZATION_CODE, TEST_REDIRECT_URI,
                                                                mockAddressSpace);
         assertSuccess(authenticationResult);
     }
 
     @Test
-    public void testFailAuthenticateViaInvalidAuthorizationCode() throws Exception
+    public void testFailAuthenticateViaInvalidAuthorizationCode()
     {
-        Map<String, OAuth2MockEndpoint> mockEndpoints = new HashMap<>();
         final OAuth2MockEndpoint mockTokenEndpoint = createMockTokenEndpoint();
         mockTokenEndpoint.putExpectedParameter("code", TEST_INVALID_AUTHORIZATION_CODE);
         mockTokenEndpoint.setResponse(400, "{\"error\":\"invalid_grant\",\"error_description\":\"authorization grant is not valid\"}");
-        mockEndpoints.put(TEST_TOKEN_ENDPOINT_PATH, mockTokenEndpoint);
-        mockEndpoints.put(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH, createMockIdentityResolverEndpoint());
+        final Map<String, OAuth2MockEndpoint> mockEndpoints = Map.of(TEST_TOKEN_ENDPOINT_PATH, mockTokenEndpoint,
+                TEST_IDENTITY_RESOLVER_ENDPOINT_PATH, createMockIdentityResolverEndpoint());
         _server.setEndpoints(mockEndpoints);
 
         final NamedAddressSpace mockAddressSpace = mock(NamedAddressSpace.class);
         when(mockAddressSpace.getName()).thenReturn("mock");
 
-        AuthenticationResult authenticationResult =
+        final AuthenticationResult authenticationResult =
                 _authProvider.authenticateViaAuthorizationCode(TEST_INVALID_AUTHORIZATION_CODE, TEST_REDIRECT_URI,
                                                                mockAddressSpace);
         assertFailure(authenticationResult, "invalid_grant");
     }
 
     @Test
-    public void testAuthenticateViaAccessToken() throws Exception
+    public void testAuthenticateViaAccessToken()
     {
-        _server.setEndpoints(Collections.singletonMap(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH,
-                                                      createMockIdentityResolverEndpoint()));
+        _server.setEndpoints(Map.of(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH, createMockIdentityResolverEndpoint()));
 
-        AuthenticationResult authenticationResult = _authProvider.authenticateViaAccessToken(TEST_VALID_ACCESS_TOKEN,
+        final AuthenticationResult authenticationResult = _authProvider.authenticateViaAccessToken(TEST_VALID_ACCESS_TOKEN,
                                                                                              null);
         assertSuccess(authenticationResult);
     }
 
     @Test
-    public void testFailAuthenticateViaInvalidAccessToken() throws Exception
+    public void testFailAuthenticateViaInvalidAccessToken()
     {
-        OAuth2MockEndpoint mockIdentityResolverEndpoint = createMockIdentityResolverEndpoint();
+        final OAuth2MockEndpoint mockIdentityResolverEndpoint = createMockIdentityResolverEndpoint();
         mockIdentityResolverEndpoint.putExpectedParameter("token", TEST_INVALID_ACCESS_TOKEN);
         mockIdentityResolverEndpoint.setResponse(400, "{\"error\":\"invalid_token\"}");
-        _server.setEndpoints(Collections.singletonMap(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH,
-                                                      mockIdentityResolverEndpoint));
+        _server.setEndpoints(Map.of(TEST_IDENTITY_RESOLVER_ENDPOINT_PATH, mockIdentityResolverEndpoint));
 
-        AuthenticationResult authenticationResult =
+        final AuthenticationResult authenticationResult =
                 _authProvider.authenticateViaAccessToken(TEST_INVALID_ACCESS_TOKEN, null);
         assertFailure(authenticationResult, "invalid_token");
     }
 
     private void assertSuccess(final AuthenticationResult authenticationResult)
     {
-        assertEquals("Authentication was not successful: " + authenticationResult.getCause(),
-                            AuthenticationResult.AuthenticationStatus.SUCCESS,
-                            authenticationResult.getStatus());
-        assertEquals("AuthenticationResult has the wrong Principal",
-                            TEST_USER_NAME,
-                            authenticationResult.getMainPrincipal().getName());
+        assertEquals(AuthenticationResult.AuthenticationStatus.SUCCESS, authenticationResult.getStatus(),
+                "Authentication was not successful: " + authenticationResult.getCause());
+        assertEquals(TEST_USER_NAME, authenticationResult.getMainPrincipal().getName(),
+                "AuthenticationResult has the wrong Principal");
     }
 
     private void assertFailure(final AuthenticationResult authenticationResult, final String failureCauseString)
     {
-        assertEquals("Authentication should not succeed",
-                            AuthenticationResult.AuthenticationStatus.ERROR,
-                            authenticationResult.getStatus());
-        assertTrue(authenticationResult.getCause().toString(),
-                          authenticationResult.getCause().toString().contains(failureCauseString));
-        assertEquals("AuthenticationResult has the wrong Principal",
-                            null,
-                            authenticationResult.getMainPrincipal());
+        assertEquals(AuthenticationResult.AuthenticationStatus.ERROR, authenticationResult.getStatus(),
+                "Authentication should not succeed");
+        assertTrue(authenticationResult.getCause().toString().contains(failureCauseString),
+                authenticationResult.getCause().toString());
+        assertNull(authenticationResult.getMainPrincipal(), "AuthenticationResult has the wrong Principal");
     }
 
     private OAuth2MockEndpoint createMockTokenEndpoint()
     {
-        OAuth2MockEndpoint tokenEndpoint = new OAuth2MockEndpoint();
+        final OAuth2MockEndpoint tokenEndpoint = new OAuth2MockEndpoint();
         tokenEndpoint.putExpectedParameter("grant_type", "authorization_code");
         tokenEndpoint.putExpectedParameter("response_type", "token");
         tokenEndpoint.putExpectedParameter("code", TEST_VALID_AUTHORIZATION_CODE);
         tokenEndpoint.putExpectedParameter("redirect_uri", TEST_REDIRECT_URI);
         tokenEndpoint.setExpectedMethod("POST");
         tokenEndpoint.setNeedsAuth(true);
-        tokenEndpoint.setResponse(200, String.format("{\"access_token\":\"%s\","
-                                                     + "\"token_type\":\"bearer\","
-                                                     + "\"expires_in\":3600}",
-                                                     TEST_VALID_ACCESS_TOKEN));
+        tokenEndpoint.setResponse(200, String.format("{\"access_token\":\"%s\"," + "\"token_type\":\"bearer\"," +
+                "\"expires_in\":3600}", TEST_VALID_ACCESS_TOKEN));
         return tokenEndpoint;
     }
 
     private OAuth2MockEndpoint createMockIdentityResolverEndpoint()
     {
-        OAuth2MockEndpoint identityResolverEndpoint = new OAuth2MockEndpoint();
+        final OAuth2MockEndpoint identityResolverEndpoint = new OAuth2MockEndpoint();
         identityResolverEndpoint.putExpectedParameter("token", TEST_VALID_ACCESS_TOKEN);
         identityResolverEndpoint.setExpectedMethod("POST");
         identityResolverEndpoint.setNeedsAuth(true);
@@ -307,23 +286,20 @@ public class OAuth2AuthenticationProviderImplTest extends UnitTestBase
         return identityResolverEndpoint;
     }
 
-
     private static final class TrustingTrustManager implements X509TrustManager
     {
         @Override
-        public void checkClientTrusted(
-                java.security.cert.X509Certificate[] certs, String authType)
+        public void checkClientTrusted(final X509Certificate[] certs, final String authType)
         {
         }
 
         @Override
-        public void checkServerTrusted(
-                java.security.cert.X509Certificate[] certs, String authType)
+        public void checkServerTrusted(final X509Certificate[] certs, final String authType)
         {
         }
 
         @Override
-        public java.security.cert.X509Certificate[] getAcceptedIssuers()
+        public X509Certificate[] getAcceptedIssuers()
         {
             return null;
         }
@@ -332,7 +308,7 @@ public class OAuth2AuthenticationProviderImplTest extends UnitTestBase
     private static final class BlindHostnameVerifier implements HostnameVerifier
     {
         @Override
-        public boolean verify(String arg0, SSLSession arg1)
+        public boolean verify(final String arg0, final SSLSession arg1)
         {
             return true;
         }
