@@ -20,8 +20,8 @@
  */
 package org.apache.qpid.server.store;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -30,10 +30,11 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.server.configuration.updater.CurrentThreadTaskExecutor;
 import org.apache.qpid.server.configuration.updater.TaskExecutor;
@@ -52,23 +53,18 @@ import org.apache.qpid.test.utils.UnitTestBase;
 public class BrokerRecovererTest extends UnitTestBase
 {
     private final ConfiguredObjectRecord _brokerEntry = mock(ConfiguredObjectRecord.class);
-    private final UUID _brokerId = UUID.randomUUID();
-    private final UUID _authenticationProvider1Id = UUID.randomUUID();
+    private final UUID _brokerId = randomUUID();
+    private final UUID _authenticationProvider1Id = randomUUID();
 
     private SystemConfig<?> _systemConfig;
     private TaskExecutor _taskExecutor;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception
     {
-
-        _taskExecutor = new CurrentThreadTaskExecutor();
-        _taskExecutor.start();
-        _systemConfig = new JsonSystemConfigImpl(_taskExecutor,
-                                                 mock(EventLogger.class),
-                                                 null, new HashMap<String,Object>())
+        _taskExecutor = CurrentThreadTaskExecutor.newStartedInstance();
+        _systemConfig = new JsonSystemConfigImpl(_taskExecutor, mock(EventLogger.class),null, Map.of())
         {
-
             {
                 updateModel(BrokerModel.getInstance());
             }
@@ -76,51 +72,41 @@ public class BrokerRecovererTest extends UnitTestBase
 
         when(_brokerEntry.getId()).thenReturn(_brokerId);
         when(_brokerEntry.getType()).thenReturn(Broker.class.getSimpleName());
-        Map<String, Object> attributesMap = new HashMap<String, Object>();
-        attributesMap.put(Broker.MODEL_VERSION, BrokerModel.MODEL_VERSION);
-        attributesMap.put(Broker.NAME, getTestName());
+
+        final Map<String, Object> attributesMap = Map.of(Broker.MODEL_VERSION, BrokerModel.MODEL_VERSION,
+                Broker.NAME, getTestName());
 
         when(_brokerEntry.getAttributes()).thenReturn(attributesMap);
-        when(_brokerEntry.getParents()).thenReturn(Collections.singletonMap(SystemConfig.class.getSimpleName(), _systemConfig
+        when(_brokerEntry.getParents()).thenReturn(Map.of(SystemConfig.class.getSimpleName(), _systemConfig
                 .getId()));
 
         //Add a base AuthenticationProvider for all tests
-        AuthenticationProvider<?> authenticationProvider1 = mock(AuthenticationProvider.class);
+        final AuthenticationProvider<?> authenticationProvider1 = mock(AuthenticationProvider.class);
         when(authenticationProvider1.getName()).thenReturn("authenticationProvider1");
         when(authenticationProvider1.getId()).thenReturn(_authenticationProvider1Id);
     }
 
-    @After
+    @AfterEach
     public void tearDown() throws Exception
     {
-        try
-        {
-        }
-        finally
-        {
-            _taskExecutor.stop();
-        }
+        _taskExecutor.stop();
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testCreateBrokerAttributes()
     {
-        Map<String, Object> attributes = new HashMap<String, Object>();
-        attributes.put(Broker.NAME, getTestName());
-        attributes.put(Broker.STATISTICS_REPORTING_PERIOD, 4000);
-        attributes.put(Broker.MODEL_VERSION, BrokerModel.MODEL_VERSION);
-
-        Map<String, Object> entryAttributes = new HashMap<>();
-        for (Map.Entry<String, Object> attribute : attributes.entrySet())
-        {
-            String value = convertToString(attribute.getValue());
-            entryAttributes.put(attribute.getKey(), value);
-        }
+        final Map<String, Object> attributes = Map.of(Broker.NAME, getTestName(),
+                Broker.STATISTICS_REPORTING_PERIOD, 4000,
+                Broker.MODEL_VERSION, BrokerModel.MODEL_VERSION);
+        final Map<String, Object> entryAttributes = attributes.entrySet()
+                .stream()
+                .collect(Collectors.toMap(Map.Entry::getKey, entry -> convertToString(entry.getValue())));
 
         when(_brokerEntry.getAttributes()).thenReturn(entryAttributes);
 
         resolveObjects(_brokerEntry);
-        Broker<?> broker = _systemConfig.getContainer(Broker.class);
+        final Broker<?> broker = _systemConfig.getContainer(Broker.class);
 
         assertNotNull(broker);
 
@@ -128,130 +114,119 @@ public class BrokerRecovererTest extends UnitTestBase
 
         assertEquals(_brokerId, broker.getId());
 
-        for (Map.Entry<String, Object> attribute : attributes.entrySet())
+        for (final Map.Entry<String, Object> attribute : attributes.entrySet())
         {
-            Object attributeValue = broker.getAttribute(attribute.getKey());
-            assertEquals("Unexpected value of attribute '" + attribute.getKey() + "'",
-                                attribute.getValue(),
-                                attributeValue);
-
+            final Object attributeValue = broker.getAttribute(attribute.getKey());
+            assertEquals(attribute.getValue(), attributeValue, "Unexpected value of attribute '" +
+                    attribute.getKey() + "'");
         }
     }
 
-    public ConfiguredObjectRecord createAuthProviderRecord(UUID id, String name)
+    public ConfiguredObjectRecord createAuthProviderRecord(final UUID id, final String name)
     {
-        final Map<String, Object> authProviderAttrs = new HashMap<String, Object>();
-        authProviderAttrs.put(AuthenticationProvider.NAME, name);
-        authProviderAttrs.put(AuthenticationProvider.TYPE, "Anonymous");
-
-        return new ConfiguredObjectRecordImpl(id, AuthenticationProvider.class.getSimpleName(), authProviderAttrs, Collections
-                .singletonMap(Broker.class.getSimpleName(), _brokerEntry.getId()));
+        final Map<String, Object> authProviderAttrs = Map.of(AuthenticationProvider.NAME, name,
+                AuthenticationProvider.TYPE, "Anonymous");
+        return new ConfiguredObjectRecordImpl(id, AuthenticationProvider.class.getSimpleName(), authProviderAttrs, Map.of(Broker.class.getSimpleName(), _brokerEntry.getId()));
     }
 
 
-    public ConfiguredObjectRecord createGroupProviderRecord(UUID id, String name)
+    public ConfiguredObjectRecord createGroupProviderRecord(final UUID id, final String name)
     {
-        final Map<String, Object> groupProviderAttrs = new HashMap<String, Object>();
-        groupProviderAttrs.put(GroupProvider.NAME, name);
-        groupProviderAttrs.put(GroupProvider.TYPE, "GroupFile");
-        groupProviderAttrs.put("path", "/no-such-path");
-
-        return new ConfiguredObjectRecordImpl(id, GroupProvider.class.getSimpleName(), groupProviderAttrs, Collections
-                .singletonMap(Broker.class.getSimpleName(), _brokerEntry.getId()));
+        final Map<String, Object> groupProviderAttrs = Map.of(GroupProvider.NAME, name,
+                GroupProvider.TYPE, "GroupFile",
+                "path", "/no-such-path");
+        return new ConfiguredObjectRecordImpl(id, GroupProvider.class.getSimpleName(), groupProviderAttrs, Map.of(Broker.class.getSimpleName(), _brokerEntry.getId()));
     }
 
-    public ConfiguredObjectRecord createPortRecord(UUID id, int port, Object authProviderRef)
+    public ConfiguredObjectRecord createPortRecord(final UUID id, final int port, final Object authProviderRef)
     {
-        final Map<String, Object> portAttrs = new HashMap<String, Object>();
-        portAttrs.put(Port.NAME, "port-"+port);
-        portAttrs.put(Port.TYPE, "HTTP");
-        portAttrs.put(Port.PORT, port);
-        portAttrs.put(Port.AUTHENTICATION_PROVIDER, authProviderRef);
-
-        return new ConfiguredObjectRecordImpl(id, Port.class.getSimpleName(), portAttrs, Collections
-                .singletonMap(Broker.class.getSimpleName(), _brokerEntry.getId()));
+        final Map<String, Object> portAttrs = Map.of(Port.NAME, "port-" + port,
+                Port.TYPE, "HTTP",
+                Port.PORT, port,
+                Port.AUTHENTICATION_PROVIDER, authProviderRef);
+        return new ConfiguredObjectRecordImpl(id, Port.class.getSimpleName(), portAttrs, Map.of(Broker.class.getSimpleName(), _brokerEntry.getId()));
     }
-
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testCreateBrokerWithPorts()
     {
-        UUID authProviderId = UUID.randomUUID();
-        UUID portId = UUID.randomUUID();
+        final UUID authProviderId = randomUUID();
+        final UUID portId = randomUUID();
 
         resolveObjects(_brokerEntry, createAuthProviderRecord(authProviderId, "authProvider"), createPortRecord(
-                portId,
-                5672,
-                "authProvider"));
-        Broker<?> broker = _systemConfig.getContainer(Broker.class);
+                portId, 5672, "authProvider"));
+        final Broker<?> broker = _systemConfig.getContainer(Broker.class);
 
         assertNotNull(broker);
         broker.open();
         assertEquals(_brokerId, broker.getId());
-        assertEquals((long) 1, (long) broker.getPorts().size());
+        assertEquals(1, (long) broker.getPorts().size());
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testCreateBrokerWithOneAuthenticationProvider()
     {
-        UUID authProviderId = UUID.randomUUID();
+        final UUID authProviderId = randomUUID();
 
         resolveObjects(_brokerEntry, createAuthProviderRecord(authProviderId, "authProvider"));
-        Broker<?> broker = _systemConfig.getContainer(Broker.class);
+        final Broker<?> broker = _systemConfig.getContainer(Broker.class);
 
         assertNotNull(broker);
         broker.open();
         assertEquals(_brokerId, broker.getId());
-        assertEquals((long) 1, (long) broker.getAuthenticationProviders().size());
+        assertEquals(1, (long) broker.getAuthenticationProviders().size());
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testCreateBrokerWithMultipleAuthenticationProvidersAndPorts()
     {
-        UUID authProviderId = UUID.randomUUID();
-        UUID portId = UUID.randomUUID();
-        UUID authProvider2Id = UUID.randomUUID();
-        UUID port2Id = UUID.randomUUID();
+        final UUID authProviderId = randomUUID();
+        final UUID portId = randomUUID();
+        final UUID authProvider2Id = randomUUID();
+        final UUID port2Id = randomUUID();
 
         resolveObjects(_brokerEntry,
-                                      createAuthProviderRecord(authProviderId, "authProvider"),
-                                      createPortRecord(portId, 5672, "authProvider"),
-                                      createAuthProviderRecord(authProvider2Id, "authProvider2"),
-                                      createPortRecord(port2Id, 5673, "authProvider2"));
-        Broker<?> broker = _systemConfig.getContainer(Broker.class);
+                       createAuthProviderRecord(authProviderId, "authProvider"),
+                       createPortRecord(portId, 5672, "authProvider"),
+                       createAuthProviderRecord(authProvider2Id, "authProvider2"),
+                       createPortRecord(port2Id, 5673, "authProvider2"));
+        final Broker<?> broker = _systemConfig.getContainer(Broker.class);
 
         assertNotNull(broker);
         broker.open();
         assertEquals(_brokerId, broker.getId());
-        assertEquals((long) 2, (long) broker.getPorts().size());
+        assertEquals(2, (long) broker.getPorts().size());
 
-        assertEquals("Unexpected number of authentication providers",
-                            (long) 2,
-                            (long) broker.getAuthenticationProviders().size());
+        assertEquals(2, (long) broker.getAuthenticationProviders().size(),
+                     "Unexpected number of authentication providers");
 
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testCreateBrokerWithGroupProvider()
     {
-
-        UUID authProviderId = UUID.randomUUID();
+        final UUID authProviderId = randomUUID();
 
         resolveObjects(_brokerEntry, createGroupProviderRecord(authProviderId, "groupProvider"));
-        Broker<?> broker = _systemConfig.getContainer(Broker.class);
+        final Broker<?> broker = _systemConfig.getContainer(Broker.class);
 
         assertNotNull(broker);
         broker.open();
         assertEquals(_brokerId, broker.getId());
-        assertEquals((long) 1, (long) broker.getGroupProviders().size());
+        assertEquals(1, (long) broker.getGroupProviders().size());
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testModelVersionValidationForIncompatibleMajorVersion() throws Exception
     {
-        Map<String, Object> brokerAttributes = new HashMap<String, Object>();
-        String[] incompatibleVersions = {Integer.MAX_VALUE + "." + 0, "0.0"};
-        for (String incompatibleVersion : incompatibleVersions)
+        final Map<String, Object> brokerAttributes = new HashMap<>();
+        final String[] incompatibleVersions = { Integer.MAX_VALUE + "." + 0, "0.0" };
+        for (final String incompatibleVersion : incompatibleVersions)
         {
             // need to reset all the shared objects for every iteration of the test
             setUp();
@@ -260,60 +235,60 @@ public class BrokerRecovererTest extends UnitTestBase
             when(_brokerEntry.getAttributes()).thenReturn(brokerAttributes);
 
             resolveObjects(_brokerEntry);
-            Broker<?> broker = _systemConfig.getContainer(Broker.class);
+            final Broker<?> broker = _systemConfig.getContainer(Broker.class);
             broker.open();
-            assertEquals("Unexpected broker state", State.ERRORED, broker.getState());
+            assertEquals(State.ERRORED, broker.getState(), "Unexpected broker state");
         }
     }
 
-
     @Test
-    public void testModelVersionValidationForIncompatibleMinorVersion() throws Exception
+    @SuppressWarnings({"rawtypes", "unchecked"})
+    public void testModelVersionValidationForIncompatibleMinorVersion()
     {
-        Map<String, Object> brokerAttributes = new HashMap<String, Object>();
-        String incompatibleVersion = BrokerModel.MODEL_MAJOR_VERSION + "." + Integer.MAX_VALUE;
+        final Map<String, Object> brokerAttributes = new HashMap<>();
+        final String incompatibleVersion = BrokerModel.MODEL_MAJOR_VERSION + "." + Integer.MAX_VALUE;
         brokerAttributes.put(Broker.MODEL_VERSION, incompatibleVersion);
         brokerAttributes.put(Broker.NAME, getTestName());
 
         when(_brokerEntry.getAttributes()).thenReturn(brokerAttributes);
 
-        UnresolvedConfiguredObject<? extends ConfiguredObject> recover =
+        final UnresolvedConfiguredObject<? extends ConfiguredObject> recover =
                 _systemConfig.getObjectFactory().recover(_brokerEntry, _systemConfig);
 
-        Broker<?> broker = (Broker) recover.resolve();
+        final Broker<?> broker = (Broker<?>) (ConfiguredObject<?>) recover.resolve();
         broker.open();
-        assertEquals("Unexpected broker state", State.ERRORED, broker.getState());
+        assertEquals(State.ERRORED, broker.getState(), "Unexpected broker state");
     }
 
     @Test
-    public void testIncorrectModelVersion() throws Exception
+    @SuppressWarnings({"rawtypes", "unchecked"})
+    public void testIncorrectModelVersion()
     {
-        Map<String, Object> brokerAttributes = new HashMap<String, Object>();
+        final Map<String, Object> brokerAttributes = new HashMap<>();
         brokerAttributes.put(Broker.NAME, getTestName());
 
-        String[] versions = { Integer.MAX_VALUE + "_" + 0, "", null };
-        for (String modelVersion : versions)
+        final String[] versions = { Integer.MAX_VALUE + "_" + 0, "", null };
+        for (final String modelVersion : versions)
         {
             brokerAttributes.put(Broker.MODEL_VERSION, modelVersion);
             when(_brokerEntry.getAttributes()).thenReturn(brokerAttributes);
 
             UnresolvedConfiguredObject<? extends ConfiguredObject> recover =
                     _systemConfig.getObjectFactory().recover(_brokerEntry, _systemConfig);
-            Broker<?> broker = (Broker) recover.resolve();
+            final Broker<?> broker = (Broker<?>) (ConfiguredObject<?>) recover.resolve();
             broker.open();
-            assertEquals("Unexpected broker state", State.ERRORED, broker.getState());
+            assertEquals(State.ERRORED, broker.getState(), "Unexpected broker state");
         }
     }
 
-    private String convertToString(Object attributeValue)
+    private String convertToString(final Object attributeValue)
     {
         return String.valueOf(attributeValue);
     }
 
-    private void resolveObjects(ConfiguredObjectRecord... records)
+    private void resolveObjects(final ConfiguredObjectRecord... records)
     {
-        GenericRecoverer recoverer = new GenericRecoverer(_systemConfig);
+        final GenericRecoverer recoverer = new GenericRecoverer(_systemConfig);
         recoverer.recover(Arrays.asList(records), false);
     }
-
 }
